# ts-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
cli/: Cargo.toml
cli/src/: args.rs  cargo.rs  config.rs  main.rs  metadata.rs  path.rs
config/: Cargo.toml  README.md
config/src/: lib.rs
e2e/: README.md
e2e/dependencies/consumer/: Cargo.toml
e2e/dependencies/consumer/src/: main.rs
e2e/dependencies/dependency1/: Cargo.toml
e2e/dependencies/dependency1/src/: lib.rs
e2e/workspace/: Cargo.toml
e2e/workspace/.cargo/: config.toml
e2e/workspace/crate1/: Cargo.toml
e2e/workspace/crate1/src/: lib.rs
e2e/workspace/crate2/: Cargo.toml
e2e/workspace/crate2/src/: lib.rs
e2e/workspace/parent/: Cargo.toml
e2e/workspace/parent/src/: main.rs
e2e/workspace/renamed/: Cargo.toml
e2e/workspace/renamed/src/: main.rs
example/: Cargo.toml  ts-rs.toml
example/src/: lib.rs
macros/: Cargo.toml
macros/src/: deps.rs  lib.rs  macros.rs  optional.rs  path.rs  utils.rs
macros/src/attr/: enum.rs  field.rs  fn.rs  generic.rs  mod.rs  struct.rs  variant.rs
macros/src/enum/: mod.rs
macros/src/struct/: mod.rs  named.rs  newtype.rs  tuple.rs  unit.rs
macros/src/types/: enum.rs  fn.rs  generics.rs  mod.rs  named.rs  newtype.rs  tuple.rs  type_as.rs  type_override.rs  unit.rs
ts-rs/: Cargo.toml
ts-rs/src/: arrayvec.rs  chrono.rs  export.rs  jiff.rs  lib.rs  rust_decimal.rs  serde_json.rs  tokio.rs  typelist.rs
ts-rs/src/export/: error.rs  path.rs
ts-rs/src/export/path/: absolute.rs  clean.rs
ts-rs/tests/: arrays.rs  chrono.rs  concrete_generic.rs  crate_rename.rs  doc_string.rs  docs.rs  enum_flattening.rs  enum_flattening_nested.rs  enum_flattenning.rs  enum_struct_rename_all.rs  enum_variant_annotation.rs  enum_with_repeated_dependencies.rs  export_here.rs  export_manually.rs  field_rename.rs  flatten.rs  fn.rs  generic_fields.rs  generic_struct.rs  generic_without_import.rs  generics.rs  hashmap.rs  hashset.rs  imports.rs  index_vec.rs  indexmap.rs  infer_as.rs  issue-168.rs  issue-232.rs  issue-70.rs  issue-80.rs  leading_colon.rs  lifetimes.rs  list.rs  macro.rs  main.rs  nested.rs  optional_field.rs  path_bug.rs  ranges.rs  (+34 more)
ts-rs/tests/export_manually/: mod.rs
ts-rs/tests/generics/: mod.rs
ts-rs/tests/hashmap/: mod.rs
ts-rs/tests/imports/: mod.rs
ts-rs/tests/integration/: arrays.rs  arrayvec.rs  bound.rs  bson.rs  chrono.rs  complex_flattened_type.rs  concrete_generic.rs  docs.rs  enum_flattening.rs  enum_flattening_nested.rs  enum_struct_rename_all.rs  enum_typescript.rs  enum_variant_annotation.rs  export_manually.rs  export_to.rs  field_rename.rs  flatten.rs  generic_fields.rs  generic_without_import.rs  generics.rs  generics_flatten.rs  hashmap.rs  hashset.rs  impl_primitive.rs  imports.rs  indexmap.rs  infer_as.rs  issue_168.rs  issue_232.rs  issue_308.rs  issue_317.rs  issue_338.rs  issue_397.rs  issue_415.rs  issue_70.rs  issue_80.rs  jiff.rs  lifetimes.rs  list.rs  main.rs  (+38 more)
ts-rs/tests/issue_232/: mod.rs
ts-rs/tests/issue_70/: mod.rs
ts-rs/tests/path_bug/: mod.rs
ts-rs/tests/references/: mod.rs
ts-rs/tests/self_referential/: mod.rs
ts-rs/tests/simple/: mod.rs
ts-rs/tests/skip/: mod.rs
ts-rs/tests/struct_tag/: mod.rs
ts-rs/tests/tuple/: mod.rs
ts-rs/tests/union_rename/: mod.rs
ts-rs/tests/union_serde/: mod.rs
