[package]
name = "ts-rs-macros"
version = "6.0.5"
authors = ["Moritz Bischof <moritz.bischof1@gmail.com>"]
edition = "2021"
description = "derive macro for ts-rs"
license = "MIT"
homepage = "https://github.com/Aleph-Alpha/ts-rs"
repository = "https://github.com/Aleph-Alpha/ts-rs"

[features]
serde-compat = ["termcolor"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
Inflector = "0.11"
termcolor = { version = "1", optional = true }