[package]
name = "ts-rs-macros"
version = "7.1.0"
authors = ["Moritz Bischof <moritz.bischof1@gmail.com>"]
edition = "2021"
description = "derive macro for ts-rs"
license = "MIT"
homepage = "https://github.com/Aleph-Alpha/ts-rs"
repository = "https://github.com/Aleph-Alpha/ts-rs"

[features]
serde-compat = ["termcolor"]
no-serde-warnings = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.28", features = ["full", "extra-traits"] }
Inflector = { version = "0.11", default-features = false }
termcolor = { version = "1", optional = true }
