[package]
name = "ts-rs-macros"
version = "11.0.1"
authors = ["Moritz Bischof <moritz.bischof1@gmail.com>"]
edition = "2021"
description = "derive macro for ts-rs"
license = "MIT"
homepage = "https://github.com/Aleph-Alpha/ts-rs"
repository = "https://github.com/Aleph-Alpha/ts-rs"

[features]
serde-compat = ["termcolor"]
no-serde-warnings = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.28", features = ["full", "extra-traits"] }
termcolor = { version = "1", optional = true }
