[package]
name = "ts-rs"
version = "6.2.0"
authors = ["Moritz Bischof <moritz.bischof1@gmail.com>"]
edition = "2021"
license = "MIT"
description = "generate typescript bindings from rust types"
homepage = "https://github.com/Aleph-Alpha/ts-rs"
repository = "https://github.com/Aleph-Alpha/ts-rs"
keywords = ["typescript", "ts", "bindings", "ts-rs", "wasm"]
categories = ["development-tools::ffi", "development-tools::build-utils", "wasm", "web-programming"]
readme = "../README.md"

[features]
chrono-impl = ["chrono"]
bigdecimal-impl = ["bigdecimal"]
uuid-impl = ["uuid"]
bson-uuid-impl = ["bson"]
bytes-impl = ["bytes"]
serde-compat = ["ts-rs-macros/serde-compat"]
format = ["dprint-plugin-typescript"]
default = ["serde-compat"]
indexmap-impl = ["indexmap"]
ordered-float-impl = ["ordered-float"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies]
ts-rs-macros = { version = "6.2.0", path = "../macros" }
dprint-plugin-typescript = { version = "0.77", optional = true }
chrono = { version = "0.4.19", optional = true }
bigdecimal = { version = ">=0.0.13, < 0.4.0", features = ["serde"], optional = true }
uuid = { version = "^1.1.2", optional = true }
bson = { version = "^2.2.0", optional = true }
bytes = { version = "1.0", optional = true }
thiserror = "1"
indexmap = { version = "1.6.1", optional = true }
ordered-float = { version = "3.0.0", optional = true }
