[package]
name = "ts-rs"
version = "11.0.1"
authors = ["Moritz Bischof <moritz.bischof1@gmail.com>"]
edition = "2021"
license = "MIT"
description = "generate typescript bindings from rust types"
homepage = "https://github.com/Aleph-Alpha/ts-rs"
repository = "https://github.com/Aleph-Alpha/ts-rs"
keywords = ["typescript", "ts", "bindings", "ts-rs", "wasm"]
categories = [
    "development-tools::ffi",
    "development-tools::build-utils",
    "wasm",
    "web-programming",
]
readme = "../README.md"
rust-version = "1.78.0"

[features]
chrono-impl = ["chrono"]
bigdecimal-impl = ["bigdecimal"]
uuid-impl = ["uuid"]
bson-uuid-impl = ["bson"]
bytes-impl = ["bytes"]
url-impl = ["url"]
serde-compat = ["ts-rs-macros/serde-compat"]
format = ["dprint-plugin-typescript"]
default = ["serde-compat"]
indexmap-impl = ["indexmap"]
ordered-float-impl = ["ordered-float"]
heapless-impl = ["heapless"]
semver-impl = ["semver"]
smol_str-impl = ["smol_str"]
serde-json-impl = ["serde_json"]
no-serde-warnings = ["ts-rs-macros/no-serde-warnings"]
import-esm = []
tokio-impl = ["tokio"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.40", features = ["sync", "rt"] }

[dependencies]
ts-rs-macros = { version = "=11.0.1", path = "../macros" }
thiserror = "2"

heapless = { version = ">= 0.7, < 0.9", optional = true }
dprint-plugin-typescript = { version = "0.90", optional = true }
chrono = { version = "0.4", optional = true }
bigdecimal = { version = ">= 0.0.13, < 0.5", features = ["serde"], optional = true }
uuid = { version = "1", optional = true }
bson = { version = "2", optional = true }
bytes = { version = "1", optional = true }
url = { version = "2", optional = true }
semver = { version = "1", optional = true }
smol_str = { version = "0.3", optional = true }
indexmap = { version = "2", optional = true }
ordered-float = { version = ">= 3, < 6", optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
